--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,11 @@ dependencies:
   responsive_framework: ^0.2.0
   animate_do: ^4.2.0
   flutter_animated_dialog: ^2.0.1
+  google_sign_in: ^7.1.1
   image_picker: ^1.0.7
+  cloud_firestore:
+  firebase_auth:
+  firebase_core:
   flutter_staggered_grid_view: ^0.7.0
   carousel_slider: ^5.1.1
   shared_preferences: ^2.2.2
