--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,7 @@ dependencies:
   image_picker: ^1.0.7
   cloud_firestore:
   firebase_auth:
-  firebase_core:
+  firebase_core: ^4.0.0
   flutter_staggered_grid_view: ^0.7.0
   carousel_slider: ^5.1.1
   shared_preferences: ^2.2.2
