--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
         android:label="Carbon Fora"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyB2t4hOvy4D0fX0nb8T_By3xp4ibdkjWTQ"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
