--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   cloud_firestore:
   firebase_auth:
   firebase_core: ^4.0.0
+  google_maps_flutter: ^2.12.3
   flutter_staggered_grid_view: ^0.7.0
   carousel_slider: ^5.1.1
   shared_preferences: ^2.2.2
