--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   file_picker: ^10.3.1
   http: ^1.5.0
   provider: ^6.1.5
+  awesome_top_snackbar: ^0.0.3
 
 dev_dependencies:
   flutter_test:
