--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   cloud_firestore:
   firebase_auth:
   firebase_core: ^4.0.0
+  animated_text_kit: ^4.2.3
   geolocator: ^14.0.2
   google_maps_flutter: ^2.12.3
   flutter_staggered_grid_view: ^0.7.0
