--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   pinput: ^5.0.1
   responsive_framework: ^0.2.0
+  permission_handler:
   animate_do: ^4.2.0
   flutter_animated_dialog: ^2.0.1
   google_sign_in: ^7.1.1
