--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,9 +36,14 @@ dependencies:
   cupertino_icons: ^1.0.8
   go_router: ^16.0.0
   cached_network_image: ^3.3.1
+  firebase_messaging: 
+  flutter_local_notifications:
   shimmer: ^3.0.0
+  exif: 
+  app_settings:
   flutter_svg: ^2.0.10+1
   pinput: ^5.0.1
+  flutter_widget_from_html: 0.17.1
   responsive_framework: ^0.2.0
   permission_handler:
   animate_do: ^4.2.0
@@ -49,6 +54,7 @@ dependencies:
   firebase_auth:
   firebase_core: ^4.0.0
   animated_text_kit: ^4.2.3
+  url_launcher:
   geolocator: ^14.0.2
   google_maps_flutter: ^2.12.3
   flutter_staggered_grid_view: ^0.7.0
@@ -63,6 +69,7 @@ dependencies:
   file_picker: ^10.3.1
   http: ^1.5.0
   provider: ^6.1.5
+  share_plus:
   awesome_top_snackbar: ^0.0.3
 
 dev_dependencies:
